[package]
name = "yozuk-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lazy-regex = "2.3.0"
mediatype = "0.19.3"
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
yozuk = { version = "0.18.3", features = ["rayon"] }
yozuk-sdk = "0.18.2"
